@@ -9,17 +9,30 @@ Puppet::Functions.create_function(:'compliance_markup::enforcement') do
     param "Hash", :options
     param "Undef", :context
   end
+
   def initialize(closure_scope, loader)
     filename = File.expand_path('../../../../puppetx/simp/compliance_mapper.rb', __FILE__)
 
     self.instance_eval(File.read(filename),filename)
     super(closure_scope, loader)
   end
+
   def hiera_enforcement(key, options, context)
     retval = nil
-    @context = context
+
+    # This is needed to prevent infinite looping. Usually, the lookup function
+    # is called from different modules and, therefore, requires different
+    # scoping. However, in our case, we're actually looking across modules and
+    # need to maintain the same context at all times to ensure that caching
+    # works properly.
+
+    @context ||= context
+
+    # Quick return if we already have a cached value for the key.
+    return cached_value(key) if cached_value(key)
+
     begin
-      retval = enforcement(key) do |k, default|
+      retval = enforcement(key, @context) do |k, default|
          call_function('lookup', k, { 'default_value' => default})
       end
     rescue => e
@@ -28,11 +41,18 @@ Puppet::Functions.create_function(:'compliance_markup::enforcement') do
       end
       not_found
     end
+
+    # Add the key to the cache if we found something
+
+    cache(key, retval) if retval
+
     retval
   end
+
   def codebase()
     'compliance_markup::enforcement'
   end
+
   def environment()
     closure_scope.environment.name.to_s
   end
@@ -43,21 +63,29 @@ Puppet::Functions.create_function(:'compliance_markup::enforcement') do
       throw :no_such_key
     end
   end
+
   def debug(message)
     if (!@context.nil?)
       @context.explain() { "#{message}" }
     end
   end
+
   def cache(key, value)
     if (!@context.nil?)
       @context.cache(key, value)
     end
   end
+
+  def cached_entries
+    @context.cached_entries
+  end
+
   def cached_value(key)
     if (!@context.nil?)
       @context.cached_value(key)
     end
   end
+
   def cache_has_key(key)
     if (!@context.nil?)
       @context.cache_has_key(key)
@@ -70,5 +98,9 @@ Puppet::Functions.create_function(:'compliance_markup::enforcement') do
   end
   def module_list
     closure_scope.environment.modules.map { |obj| { "name" => obj.metadata["name"], "version" => obj.metadata["version"] } }
+  end
+
+  def cache_all(hash)
+    @context.cache_all(hash)
   end
 end
