@@ -1,3 +1,7 @@
+* Tue Mar 19 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.2.0-0
+  - Ensure that the Hiera backend recurses as little as possible to improve
+    performance.
+
 * Wed Dec 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.0-0
 - Add EL8 support
 
